tests/sksl/errors/Ossfuzz40479.glsl
### Compilation failed:

error: 1: integer is out of range for type 'int': 4016112253
error: 1: array size must be an integer
error: 1: type 'void' may not be used in an array
error: 2: expected ']', but found ''
error: 2: expected an identifier, but found ''
5 errors
